# Bevare

./: .gitmodules  CMakeLists.txt  Setup.bat
.github/workflows/: CMake-Tests.yml
Bevare/: CMakeLists.txt
Bevare/Include/: BevareCore.h  BevarePCH.h  BevarePlatformDetection.h
Bevare/Include/Application/: Application.h  ApplicationEntryPoint.inc
Bevare/Include/Graphics/: Graphics.h
Bevare/Include/Graphics/Context/: GraphicsContext.h  GraphicsContext_DX12.h
Bevare/Include/Memory/: BevareEASTLAlloc.h
Bevare/Source/Application/: Application.cc
Bevare/Source/Graphics/: GraphicsContext_DX12.cc
Bevare/Source/Memory/: BevareEASTLAlloc.cc
Bevare/Test/: CMakeLists.txt
BevareSandbox/: CMakeLists.txt
BevareSandbox/Source/: BevareSandbox.cc
